syntax = "proto3";

package proto;

service PostService{
  rpc GetPosts(GetPostsReq) returns (stream GetPostsRes);
  rpc GetPostById(GetPostByIdReq) returns (GetPostByIdRes);
  rpc CreatePost(CreatePostReq) returns (CreatePostRes);
  rpc DeletePost(DeletePostReq) returns (DeletePostRes);
}

message GetPostsReq{
  string thread_id = 1;
  int64 skip = 2;
  int64 limit = 3;
}

message GetPostsRes{
  Post post = 1;
}

message GetPostByIdReq{
  string id = 1;
}

message GetPostByIdRes{
  Post post = 1;
}

message CreatePostReq{
  Post post = 1;
}

message CreatePostRes{
  string id = 1;
}

message DeletePostReq{
  string id = 1;
}

message DeletePostRes{
  int64 count = 1;
}

message Post{
  string id = 1;
  string thread_id = 2;
  string description = 3;
  repeated string quote_ids = 4;
  string text = 5;
  string image_url = 6;
  string video_url = 7;
  uint64 created_at = 8;
}